# NYUFinger

./: LICENSE  MakeFile  README.md  setup.cfg
.devcontainer/: devcontainer.json
FingerMsgs/: .idlpy_manifest  __init__.py  _finger_msgs.py
FingerPy/: sim.py
FingerPy/models/: single_finger_scene.xml
FingerPy/msg_definitions/: finger_msgs.idl
FingerPy/robot/: interface.py
Hardware/Firmware/TeensyDAQ/: udp_bridge.ipynb
Hardware/Firmware/TeensyDAQ/include/: odri_microdriver.hpp
Hardware/Firmware/TeensyDAQ/src/: main.cpp
Notebooks/laboratory/Lab1/: Readme.md  pd_controller.ipynb  sensors_and_actuators.ipynb
dds_bridge/: bridge.py
examples/: MUJOCO_LOG.TXT  tests.ipynb
scripts/: make_dds_msgs.sh
