[metadata]
name = NYUFingerV2
version = 1.0.0
description =  Upgraded hardware amd software stack for the NYU finger open-source robot. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rooholla-KhorramBakht/NYUFinger
author = Rooholla Khorrambakht
author_email = rk4342@nyu.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
include_package_data = True
install_requires =
    pygame
    # pyzmq>=25.0.0
    # pyyaml>=5.3.1
    # pin
    # proxsuite
    # pin==2.6.18
    # proxsuite==0.3.7
    # pyrealsense2==2.54.1.5217
    # pupil_apriltags
[options.entry_points]
console_scripts =
    finger_dds_bridge = finger_dds_bridge.async_sim_app:main